chore: fix spacing for components

--- a/packages/styling/src/Menu/GenericMenu-layout.scss
+++ b/packages/styling/src/Menu/GenericMenu-layout.scss
@@ -1,8 +1,11 @@
 .str-video__generic-menu {
   list-style: none;
   margin: unset;
-  padding: 5px;
-  border-radius: var(--str-video__border-radius-xs);
+  background-color: var(--str-video__base-color7);
+  padding: var(--str-video__spacing-md);
+
+  border-radius: var(--str-video__border-radius-lg);
+
   display: flex;
   flex-direction: column;
   gap: 1px;
